force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/Apttus_Config2__ProductAttributeRuleAction__c.object-meta.xml
<CustomObject>
    <description>Represents a single action in a product attribute rule</description>
    <label>Product Attribute Rule Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>