force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Action__c</fullName>
    <description>The action associated with the rule</description>
    <inlineHelpText>The action associated with the rule</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>