force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__ActionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionCriteria__c</fullName>
    <description>The action criteria specification</description>
    <inlineHelpText>The action criteria specification</inlineHelpText>
    <label>Action Criteria</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>