force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__ActionCriteriaExpression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionCriteriaExpression__c</fullName>
    <description>The action criteria expression</description>
    <inlineHelpText>The action criteria expression</inlineHelpText>
    <label>Action Criteria Expression</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>