force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__Field__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Field__c</fullName>
    <description>The target attribute for the action</description>
    <inlineHelpText>The target attribute for the action</inlineHelpText>
    <label>Target Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>