force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message__c</fullName>
    <description>The action message</description>
    <inlineHelpText>The action message</inlineHelpText>
    <label>Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>