force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__ProductAttributeRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeRuleId__c</fullName>
    <description>ID of the associated product attribute rule</description>
    <inlineHelpText>ID of the associated product attribute rule</inlineHelpText>
    <label>Product Attribute Rule</label>
    <referenceTo>Apttus_Config2__ProductAttributeRule__c</referenceTo>
    <relationshipLabel>Product Attribute Rule Actions</relationshipLabel>
    <relationshipName>ProductAttributeRuleActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>