force-app/main/default/objects/Apttus_Config2__ProductAttributeRuleAction__c/fields/Apttus_Config2__ValueExpression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValueExpression__c</fullName>
    <description>The value expression for the action</description>
    <inlineHelpText>The value expression for the action</inlineHelpText>
    <label>Value Expression</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>